<resources>
    <string name="app_name">vinilos_g24</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Vinilos</string>
    <string name="nav_header_subtitle">vinilos@miso.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_artistas">Artistas</string>
    <string name="menu_albumes">Álbumes</string>
    <string name="menu_premios">Premios</string>
    <string name="menu_coleccionistas">Coleccionistas</string>
    <string name="imagen_del_album">Imagen del álbum</string>
    <string name="imagen_del_artista">Imagen del artista</string>
    <string-array name="puntaje">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>