<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/fabCrearAlbum" /> <!-- Ajusta la posición del RecyclerView para que esté por encima del botón flotante -->

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabCrearAlbum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="Add album"
        android:src="@drawable/plus" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabComentarAlbum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="165dp"
        android:contentDescription="Comentar album"
        android:src="@drawable/comment_svg" />

</RelativeLayout>